--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
     
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
-        
+        "source.fixAll.eslint": true,
     },
-    "eslint no-unused-vars: ["error", { "varsIgnorePattern": "[iI]gnored" }]"
+    
 }
   
