--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "husky": "^4.2.5",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "pretty-quick": "^2.0.1",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
